--- a/app/assets/stylesheets/simple_calendar.scss
+++ b/app/assets/stylesheets/simple_calendar.scss
@@ -70,7 +70,7 @@
     :hover {
       .badge {
         background: var(--date-hover-color);
-        color: white;
+        color: var(--date-color);
       }
     }
   }
